--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "axios": "^0.27.2",
     "emailjs": "^4.0.1",
+    "formik": "^2.2.9",
     "next": "14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.54.4"
+    "sass": "^1.54.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.57.0",
